--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -50,11 +50,13 @@
           placeholder="{{ 'password.placeholder' | translate }}"
           required
           type="password"
+          aria-describedby="invalid"
         >
         @if (showIsInvalid && isInvalid) {
           <div
             class="invalid-message"
             data-id="msgInvalid"
+            id="invalid"
           >
             <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
             {{ 'password.invalid' | translate }}
