fix: remove double `row`
Double row resulted in too much whitespace

--- a/src/app/create-suggested-dates/create-suggested-dates.component.html
+++ b/src/app/create-suggested-dates/create-suggested-dates.component.html
@@ -357,144 +357,141 @@
         }
         <!-- bottom row for the time entry controls -->
         @if (getShowSuggestedDateEndDateOnDifferentDayFormValue(i)) {
-          <div
-            class="row g-0 justify-content-start align-items-start">
-            <div class="row">
-              <!-- button to display start time and end time controls on the bottom row -->
-              @if (!getShowStartDateStartTimeControlValue(i) && !getStartTimeOfSuggestedStartDateByIndex(i).value) {
-                <div
-                  class="col-12 col-lg-6 px-1 px-lg-3 suggested-date-timepicker-start has-error-highlight text-center">
-                  <div class="justify-content-start">
-                    <label class="float-start" for="suggested-date-start-time-{{i}}">
-                      {{ 'time.time' | translate }}
-                    </label>
-                    <div class="input-group date">
-                      <div class="input-group-prepend">
-                        <div class="input-group-text input-group-divider">
-                          <img alt="Add time" ngSrc="assets/add-time.svg" height="height" width="width">
-                        </div>
+          <div class="row g-0 justify-content-start align-items-start">
+            <!-- button to display start time and end time controls on the bottom row -->
+            @if (!getShowStartDateStartTimeControlValue(i) && !getStartTimeOfSuggestedStartDateByIndex(i).value) {
+              <div
+                class="col-12 col-lg-6 px-1 px-lg-3 suggested-date-timepicker-start has-error-highlight text-center">
+                <div class="justify-content-start">
+                  <label class="float-start" for="suggested-date-start-time-{{i}}">
+                    {{ 'time.time' | translate }}
+                  </label>
+                  <div class="input-group date">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text input-group-divider">
+                        <img alt="Add time" ngSrc="assets/add-time.svg" height="height" width="width">
                       </div>
-                      <!--suppress XmlDuplicatedId these duplicate ids  will never appear on the page at the same time-->
-                      <button
-                        (click)="closeAllControlsExcept(i); setShowStartTimesControlValue(i, true);  setShowEndDateEndTimeControlValue(i, true)"
-                        [disabled]="isSuggestedDateFromDatabase(i)"
-                        class="form-control col date"
-                        data-id="addTimesWithEndOnOtherDay"
-                        type="button"
-                      >
-                        {{ 'time.add' | translate }}
-                      </button>
                     </div>
+                    <!--suppress XmlDuplicatedId these duplicate ids  will never appear on the page at the same time-->
+                    <button
+                      (click)="closeAllControlsExcept(i); setShowStartTimesControlValue(i, true);  setShowEndDateEndTimeControlValue(i, true)"
+                      [disabled]="isSuggestedDateFromDatabase(i)"
+                      class="form-control col date"
+                      data-id="addTimesWithEndOnOtherDay"
+                      type="button"
+                    >
+                      {{ 'time.add' | translate }}
+                    </button>
                   </div>
                 </div>
-              }
-              <!-- controls to enter start time - displayed if the button has been clicked or if values have been entered before -->
-              @if (getShowStartDateStartTimeControlValue(i) || getStartTimeOfSuggestedStartDateByIndex(i).value) {
-                <div
-                  [ngClass]="{'has-error': getStartTimeOfSuggestedStartDateByIndex(i).invalid
-                    && (getStartTimeOfSuggestedStartDateByIndex(i).dirty || getStartTimeOfSuggestedStartDateByIndex(i).touched)}"
-                  class="col-6 col-lg px-1 px-lg-3 my-1 form-group suggested-date-timepicker-start has-error-highlight">
-                  <label for="suggested-date-start-time-{{i}}">{{ 'time.start' | translate }}</label>
-                  @if (!isMobileDevice) {
-                    <div class="row g-0 input-group date"
-                         data-target-input="nearest">
-                      <div class="col-6">
-                        <div class="input-group date">
-                          <div class="input-group-prepend">
-                            <div class="input-group-text input-group-divider">
-                              <img alt="clock" ngSrc="assets/starttime.svg" height="height" width="width">
-                            </div>
+              </div>
+            }
+            <!-- controls to enter start time - displayed if the button has been clicked or if values have been entered before -->
+            @if (getShowStartDateStartTimeControlValue(i) || getStartTimeOfSuggestedStartDateByIndex(i).value) {
+              <div
+                [ngClass]="{'has-error': getStartTimeOfSuggestedStartDateByIndex(i).invalid
+                  && (getStartTimeOfSuggestedStartDateByIndex(i).dirty || getStartTimeOfSuggestedStartDateByIndex(i).touched)}"
+                class="col-6 col-lg px-1 px-lg-3 my-1 form-group suggested-date-timepicker-start has-error-highlight">
+                <label for="suggested-date-start-time-{{i}}">{{ 'time.start' | translate }}</label>
+                @if (!isMobileDevice) {
+                  <div class="row g-0 input-group date"
+                       data-target-input="nearest">
+                    <div class="col-6">
+                      <div class="input-group date">
+                        <div class="input-group-prepend">
+                          <div class="input-group-text input-group-divider">
+                            <img alt="clock" ngSrc="assets/starttime.svg" height="height" width="width">
                           </div>
-                          <!--suppress XmlDuplicatedId these duplicate ids  will never appear on the page at the same time-->
-                          <input
-                            class="form-control"
-                            data-id="startTimeInputSecondColumn"
-                            formControlName="startTime"
-                            id="suggested-date-start-time-{{i}}"
-                            placeholder="{{ 'time.placeholder' | translate }}"
-                            aria-describedby="start-date-after-end-date end-time-entered-but-no-start-time-entered start-date-time-in-past"
-                          >
                         </div>
+                        <!--suppress XmlDuplicatedId these duplicate ids  will never appear on the page at the same time-->
+                        <input
+                          class="form-control"
+                          data-id="startTimeInputSecondColumn"
+                          formControlName="startTime"
+                          id="suggested-date-start-time-{{i}}"
+                          placeholder="{{ 'time.placeholder' | translate }}"
+                          aria-describedby="start-date-after-end-date end-time-entered-but-no-start-time-entered start-date-time-in-past"
+                        >
                       </div>
                     </div>
-                  } @else {
-                    <div class="input-group" data-target-input="nearest">
-                      <div class="input-group-prepend">
-                        <div class="input-group-text input-group-divider">
-                          <img alt="clock" ngSrc="assets/starttime.svg" height="height" width="width">
-                        </div>
+                  </div>
+                } @else {
+                  <div class="input-group" data-target-input="nearest">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text input-group-divider">
+                        <img alt="clock" ngSrc="assets/starttime.svg" height="height" width="width">
                       </div>
-                      <!--suppress XmlDuplicatedId these duplicate ids  will never appear on the page at the same time-->
-                      <input
-                        #mobileStartTimeInput
-                        (input)="parseAndSetTime('startTime', mobileStartTimeInput.value, i)"
-                        [disabled]="isSuggestedDateFromDatabase(i)"
-                        [value]="getTimeAsString('startTime', i)"
-                        appAutoFocus
-                        class="form-control time"
-                        id="suggested-date-start-time-{{i}}"
-                        name="startTime"
-                        type="time"
-                        aria-describedby="start-date-after-end-date end-time-entered-but-no-start-time-entered start-date-time-in-past"
-                      >
                     </div>
-                  }
-                </div>
-              }
-              <!-- controls to enter the end time - displayed if the button has been clicked or if values have been entered before -->
-              @if (getShowStartDateStartTimeControlValue(i) && getShowEndDateEndTimeControlValue(i)
-              || getStartTimeOfSuggestedStartDateByIndex(i).value) {
-                <div
-                  [ngClass]="{'has-error': getEndTimeOfSuggestedEndDateByIndex(i).invalid
-                   && (getEndTimeOfSuggestedEndDateByIndex(i).dirty || getEndTimeOfSuggestedEndDateByIndex(i).touched)}"
-                  class="col-6 col-lg px-1 px-lg-3 my-1 form-group suggested-date-timepicker-start has-error-highlight">
-                  <label for="suggested-date-end-time-different-day-{{i}}">{{ 'time.end' | translate }}</label>
-                  @if (!isMobileDevice) {
-                    <div class="row g-0 input-group date"
-                         data-target-input="nearest">
-                      <div class="col-6">
-                        <div class="input-group date">
-                          <div class="input-group-prepend">
-                            <div class="input-group-text input-group-divider">
-                              <img alt="clock" ngSrc="assets/endtime.svg" height="height" width="width">
-                            </div>
+                    <!--suppress XmlDuplicatedId these duplicate ids  will never appear on the page at the same time-->
+                    <input
+                      #mobileStartTimeInput
+                      (input)="parseAndSetTime('startTime', mobileStartTimeInput.value, i)"
+                      [disabled]="isSuggestedDateFromDatabase(i)"
+                      [value]="getTimeAsString('startTime', i)"
+                      appAutoFocus
+                      class="form-control time"
+                      id="suggested-date-start-time-{{i}}"
+                      name="startTime"
+                      type="time"
+                      aria-describedby="start-date-after-end-date end-time-entered-but-no-start-time-entered start-date-time-in-past"
+                    >
+                  </div>
+                }
+              </div>
+            }
+            <!-- controls to enter the end time - displayed if the button has been clicked or if values have been entered before -->
+            @if (getShowStartDateStartTimeControlValue(i) && getShowEndDateEndTimeControlValue(i)
+            || getStartTimeOfSuggestedStartDateByIndex(i).value) {
+              <div
+                [ngClass]="{'has-error': getEndTimeOfSuggestedEndDateByIndex(i).invalid
+                 && (getEndTimeOfSuggestedEndDateByIndex(i).dirty || getEndTimeOfSuggestedEndDateByIndex(i).touched)}"
+                class="col-6 col-lg px-1 px-lg-3 my-1 form-group suggested-date-timepicker-start has-error-highlight">
+                <label for="suggested-date-end-time-different-day-{{i}}">{{ 'time.end' | translate }}</label>
+                @if (!isMobileDevice) {
+                  <div class="row g-0 input-group date"
+                       data-target-input="nearest">
+                    <div class="col-6">
+                      <div class="input-group date">
+                        <div class="input-group-prepend">
+                          <div class="input-group-text input-group-divider">
+                            <img alt="clock" ngSrc="assets/endtime.svg" height="height" width="width">
                           </div>
-                          <!--suppress XmlDuplicatedId these duplicate ids  will never appear on the page at the same time-->
-                          <input
-                            class="form-control"
-                            data-id="endTimeInputSecondColumn"
-                            formControlName="endDateEndTime"
-                            id="suggested-date-end-time-different-day-{{i}}"
-                            placeholder="{{ 'time.placeholder' | translate }}"
-                            aria-describedby="start-date-after-end-date end-time-entered-but-no-start-time-entered start-date-time-in-past"
-                          >
                         </div>
+                        <!--suppress XmlDuplicatedId these duplicate ids  will never appear on the page at the same time-->
+                        <input
+                          class="form-control"
+                          data-id="endTimeInputSecondColumn"
+                          formControlName="endDateEndTime"
+                          id="suggested-date-end-time-different-day-{{i}}"
+                          placeholder="{{ 'time.placeholder' | translate }}"
+                          aria-describedby="start-date-after-end-date end-time-entered-but-no-start-time-entered start-date-time-in-past"
+                        >
                       </div>
                     </div>
-                  } @else {
-                    <div class="input-group" data-target-input="nearest">
-                      <div class="input-group-prepend">
-                        <div class="input-group-text input-group-divider"><img alt="clock" ngSrc="assets/endtime.svg" height="height" width="width">
-                        </div>
+                  </div>
+                } @else {
+                  <div class="input-group" data-target-input="nearest">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text input-group-divider"><img alt="clock" ngSrc="assets/endtime.svg" height="height" width="width">
                       </div>
-                      <!--suppress XmlDuplicatedId these duplicate ids  will never appear on the page at the same time-->
-                      <input
-                        #mobileEndDateEndTimeInput
-                        (input)="parseAndSetTime('endDateEndTime', mobileEndDateEndTimeInput.value, i)"
-                        [disabled]="isSuggestedDateFromDatabase(i)"
-                        [value]="getTimeAsString('endDateEndTime', i)"
-                        appAutoFocus
-                        class="form-control time"
-                        id="suggested-date-end-time-different-day-{{i}}"
-                        name="endDateEndTime"
-                        type="time"
-                        aria-describedby="start-date-after-end-date end-time-entered-but-no-start-time-entered start-date-time-in-past"
-                      >
                     </div>
-                  }
-                </div>
-              }
-            </div>
+                    <!--suppress XmlDuplicatedId these duplicate ids  will never appear on the page at the same time-->
+                    <input
+                      #mobileEndDateEndTimeInput
+                      (input)="parseAndSetTime('endDateEndTime', mobileEndDateEndTimeInput.value, i)"
+                      [disabled]="isSuggestedDateFromDatabase(i)"
+                      [value]="getTimeAsString('endDateEndTime', i)"
+                      appAutoFocus
+                      class="form-control time"
+                      id="suggested-date-end-time-different-day-{{i}}"
+                      name="endDateEndTime"
+                      type="time"
+                      aria-describedby="start-date-after-end-date end-time-entered-but-no-start-time-entered start-date-time-in-past"
+                    >
+                  </div>
+                }
+              </div>
+            }
           </div>
         }
         <!-- error messages for this date entry -->
